[gd_scene load_steps=4 format=3 uid="uid://cbeeogt8skb3b"]

[ext_resource type="Script" path="res://scenes/play/repeating_world/repeating_world.gd" id="1_50wun"]
[ext_resource type="PackedScene" path="res://scenes/play/repeating_world/world_projection.tscn" id="2_olgw8"]
[ext_resource type="PackedScene" uid="uid://cehcq8ndpkke4" path="res://scenes/play/repeating_world/teleport_area.tscn" id="3_ha3fa"]

[node name="RepeatingWorld" type="Node"]
script = ExtResource("1_50wun")

[node name="Teleports" type="Node" parent="."]

[node name="LeftToRight" parent="Teleports" instance=ExtResource("3_ha3fa")]

[node name="RightToLeft" parent="Teleports" instance=ExtResource("3_ha3fa")]

[node name="TopToBottom" parent="Teleports" instance=ExtResource("3_ha3fa")]

[node name="BottomToTop" parent="Teleports" instance=ExtResource("3_ha3fa")]

[node name="Projections" type="Node" parent="."]

[node name="LeftToRight" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="RightToLeft" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="TopToBottom" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="BottomToTop" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="TopLeftToBottomRight" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="BottomRightToTopLeft" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="TopRightToBottomLeft" parent="Projections" instance=ExtResource("2_olgw8")]

[node name="BottomLeftToTopRight" parent="Projections" instance=ExtResource("2_olgw8")]
